output/build/python-netifaces-0.10.6/build/temp.linux-x86_64-3.6/conftest4.out
/media/panpan/tools/buildroot-2018.02.8/output/host/bin/arm-linux-gnueabihf-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fPIC -DHAVE_GETIFADDRS=1 -DHAVE_GETNAMEINFO=1 -I/media/panpan/tools/buildroot-2018.02.8/output/host/arm-buildroot-linux-gnueabihf/sysroot/usr/include/python3.6m -c build/temp.linux-x86_64-3.6/conftest-2.c -o build/temp.linux-x86_64-3.6/build/temp.linux-x86_64-3.6/conftest-2.o
build/temp.linux-x86_64-3.6/conftest-2.c:7:30: fatal error: netinet/in_var.h: 没有那个文件或目录
                     #include <netinet/in_var.h>
                              ^~~~~~~~~~~~~~~~~~
compilation terminated.
/media/panpan/tools/buildroot-2018.02.8/output/host/bin/arm-linux-gnueabihf-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fPIC -DHAVE_GETIFADDRS=1 -DHAVE_GETNAMEINFO=1 -I/media/panpan/tools/buildroot-2018.02.8/output/host/arm-buildroot-linux-gnueabihf/sysroot/usr/include/python3.6m -c build/temp.linux-x86_64-3.6/conftest-3.c -o build/temp.linux-x86_64-3.6/build/temp.linux-x86_64-3.6/conftest-3.o
build/temp.linux-x86_64-3.6/conftest-3.c:5:26: fatal error: net/if_dl.h: 没有那个文件或目录
                 #include <net/if_dl.h>
                          ^~~~~~~~~~~~~
compilation terminated.
/media/panpan/tools/buildroot-2018.02.8/output/host/bin/arm-linux-gnueabihf-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fPIC -DHAVE_GETIFADDRS=1 -DHAVE_GETNAMEINFO=1 -I/media/panpan/tools/buildroot-2018.02.8/output/host/arm-buildroot-linux-gnueabihf/sysroot/usr/include/python3.6m -c build/temp.linux-x86_64-3.6/conftest-4.c -o build/temp.linux-x86_64-3.6/build/temp.linux-x86_64-3.6/conftest-4.o
/media/panpan/tools/buildroot-2018.02.8/output/host/bin/arm-linux-gnueabihf-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fPIC -DHAVE_GETIFADDRS=1 -DHAVE_GETNAMEINFO=1 -I/media/panpan/tools/buildroot-2018.02.8/output/host/arm-buildroot-linux-gnueabihf/sysroot/usr/include/python3.6m -c build/temp.linux-x86_64-3.6/conftest-5.c -o build/temp.linux-x86_64-3.6/build/temp.linux-x86_64-3.6/conftest-5.o
/media/panpan/tools/buildroot-2018.02.8/output/host/bin/arm-linux-gnueabihf-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fPIC -DHAVE_GETIFADDRS=1 -DHAVE_GETNAMEINFO=1 -I/media/panpan/tools/buildroot-2018.02.8/output/host/arm-buildroot-linux-gnueabihf/sysroot/usr/include/python3.6m -c build/temp.linux-x86_64-3.6/conftest-6.c -o build/temp.linux-x86_64-3.6/build/temp.linux-x86_64-3.6/conftest-6.o
/media/panpan/tools/buildroot-2018.02.8/output/host/bin/arm-linux-gnueabihf-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fPIC -DHAVE_GETIFADDRS=1 -DHAVE_GETNAMEINFO=1 -I/media/panpan/tools/buildroot-2018.02.8/output/host/arm-buildroot-linux-gnueabihf/sysroot/usr/include/python3.6m -c build/temp.linux-x86_64-3.6/conftest-7.c -o build/temp.linux-x86_64-3.6/build/temp.linux-x86_64-3.6/conftest-7.o
/media/panpan/tools/buildroot-2018.02.8/output/host/bin/arm-linux-gnueabihf-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fPIC -DHAVE_GETIFADDRS=1 -DHAVE_GETNAMEINFO=1 -I/media/panpan/tools/buildroot-2018.02.8/output/host/arm-buildroot-linux-gnueabihf/sysroot/usr/include/python3.6m -c build/temp.linux-x86_64-3.6/conftest-8.c -o build/temp.linux-x86_64-3.6/build/temp.linux-x86_64-3.6/conftest-8.o
/media/panpan/tools/buildroot-2018.02.8/output/host/bin/arm-linux-gnueabihf-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fPIC -DHAVE_GETIFADDRS=1 -DHAVE_GETNAMEINFO=1 -I/media/panpan/tools/buildroot-2018.02.8/output/host/arm-buildroot-linux-gnueabihf/sysroot/usr/include/python3.6m -c build/temp.linux-x86_64-3.6/conftest-9.c -o build/temp.linux-x86_64-3.6/build/temp.linux-x86_64-3.6/conftest-9.o
/media/panpan/tools/buildroot-2018.02.8/output/host/bin/arm-linux-gnueabihf-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fPIC -DHAVE_GETIFADDRS=1 -DHAVE_GETNAMEINFO=1 -I/media/panpan/tools/buildroot-2018.02.8/output/host/arm-buildroot-linux-gnueabihf/sysroot/usr/include/python3.6m -c build/temp.linux-x86_64-3.6/conftest-10.c -o build/temp.linux-x86_64-3.6/build/temp.linux-x86_64-3.6/conftest-10.o
/media/panpan/tools/buildroot-2018.02.8/output/host/bin/arm-linux-gnueabihf-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fPIC -DHAVE_GETIFADDRS=1 -DHAVE_GETNAMEINFO=1 -I/media/panpan/tools/buildroot-2018.02.8/output/host/arm-buildroot-linux-gnueabihf/sysroot/usr/include/python3.6m -c build/temp.linux-x86_64-3.6/conftest-11.c -o build/temp.linux-x86_64-3.6/build/temp.linux-x86_64-3.6/conftest-11.o
/media/panpan/tools/buildroot-2018.02.8/output/host/bin/arm-linux-gnueabihf-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fPIC -DHAVE_GETIFADDRS=1 -DHAVE_GETNAMEINFO=1 -I/media/panpan/tools/buildroot-2018.02.8/output/host/arm-buildroot-linux-gnueabihf/sysroot/usr/include/python3.6m -c build/temp.linux-x86_64-3.6/conftest-12.c -o build/temp.linux-x86_64-3.6/build/temp.linux-x86_64-3.6/conftest-12.o
/media/panpan/tools/buildroot-2018.02.8/output/host/bin/arm-linux-gnueabihf-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fPIC -DHAVE_GETIFADDRS=1 -DHAVE_GETNAMEINFO=1 -I/media/panpan/tools/buildroot-2018.02.8/output/host/arm-buildroot-linux-gnueabihf/sysroot/usr/include/python3.6m -c build/temp.linux-x86_64-3.6/conftest-13.c -o build/temp.linux-x86_64-3.6/build/temp.linux-x86_64-3.6/conftest-13.o
/media/panpan/tools/buildroot-2018.02.8/output/host/bin/arm-linux-gnueabihf-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fPIC -DHAVE_GETIFADDRS=1 -DHAVE_GETNAMEINFO=1 -I/media/panpan/tools/buildroot-2018.02.8/output/host/arm-buildroot-linux-gnueabihf/sysroot/usr/include/python3.6m -c build/temp.linux-x86_64-3.6/conftest-14.c -o build/temp.linux-x86_64-3.6/build/temp.linux-x86_64-3.6/conftest-14.o
/media/panpan/tools/buildroot-2018.02.8/output/host/bin/arm-linux-gnueabihf-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fPIC -DHAVE_GETIFADDRS=1 -DHAVE_GETNAMEINFO=1 -I/media/panpan/tools/buildroot-2018.02.8/output/host/arm-buildroot-linux-gnueabihf/sysroot/usr/include/python3.6m -c build/temp.linux-x86_64-3.6/conftest-15.c -o build/temp.linux-x86_64-3.6/build/temp.linux-x86_64-3.6/conftest-15.o
/media/panpan/tools/buildroot-2018.02.8/output/host/bin/arm-linux-gnueabihf-gcc -Wno-unused-result -Wsign-compare -DNDEBUG -g -fwrapv -O3 -Wall -Wstrict-prototypes -D_LARGEFILE_SOURCE -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -Os -fPIC -DHAVE_GETIFADDRS=1 -DHAVE_GETNAMEINFO=1 -DHAVE_NETASH_ASH_H=1 -DHAVE_NETATALK_AT_H=1 -DHAVE_NETAX25_AX25_H=1 -DHAVE_NETECONET_EC_H=1 -DHAVE_NETIPX_IPX_H=1 -DHAVE_NETPACKET_PACKET_H=1 -DHAVE_NETROSE_ROSE_H=1 -DHAVE_LINUX_IRDA_H=1 -DHAVE_LINUX_ATM_H=1 -DHAVE_LINUX_LLC_H=1 -DHAVE_LINUX_TIPC_H=1 -DHAVE_LINUX_DN_H=1 -I/media/panpan/tools/buildroot-2018.02.8/output/host/arm-buildroot-linux-gnueabihf/sysroot/usr/include/python3.6m -c build/temp.linux-x86_64-3.6/conftest-16.c -o build/temp.linux-x86_64-3.6/build/temp.linux-x86_64-3.6/conftest-16.o
build/temp.linux-x86_64-3.6/conftest-16.c: In function ‘main’:
build/temp.linux-x86_64-3.6/conftest-16.c:8:17: error: ‘struct sockaddr’ has no member named ‘sa_len’
               sa.sa_len = 5;
                 ^
build/temp.linux-x86_64-3.6/conftest-16.c:7:31: warning: variable ‘sa’ set but not used [-Wunused-but-set-variable]
               struct sockaddr sa;
                               ^~
